--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="circle-text-container" id="circleText">
             </div>
         <div class="heart">
-            <img src="/heart.png" alt="Pulsing Heart">
+            <img src="heart.png" alt="Pulsing Heart">
         </div>
     </div>
 
