--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             position: absolute;
             font-size: 18px;
             color: #333;
-            transform-origin: center; 
+            transform-origin: center;
+            letter-spacing: 1px;
         }
 
         .heart {
